--- a/CubicalRipser.vcxproj
+++ b/CubicalRipser.vcxproj
@@ -22,7 +22,8 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{76D875DC-0387-4C20-9856-2F1A988C1F27}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>
+    </WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -121,22 +122,22 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="birthday_index.cpp" />
+    <ClCompile Include="coboundary_enumerator.cpp" />
     <ClCompile Include="compute_pairs.cpp" />
+    <ClCompile Include="cube.cpp" />
     <ClCompile Include="cubicalripser.cpp" />
     <ClCompile Include="dense_cubical_grids.cpp" />
     <ClCompile Include="joint_pairs.cpp" />
-    <ClCompile Include="simplex_coboundary_enumerator.cpp" />
     <ClCompile Include="union_find.cpp" />
     <ClCompile Include="write_pairs.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="birthday_index.h" />
+    <ClInclude Include="coboundary_enumerator.h" />
     <ClInclude Include="compute_pairs.h" />
+    <ClInclude Include="cube.h" />
     <ClInclude Include="dense_cubical_grids.h" />
     <ClInclude Include="joint_pairs.h" />
     <ClInclude Include="npy.hpp" />
-    <ClInclude Include="simplex_coboundary_enumerator.h" />
     <ClInclude Include="union_find.h" />
     <ClInclude Include="write_pairs.h" />
   </ItemGroup>
