--- a/CubicalRipser.vcxproj.filters
+++ b/CubicalRipser.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="cube.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
