python command arguments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.12)
 project(cripser CXX)
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS "-O3 -Wall")
+set(CMAKE_CXX_FLAGS "-O3 -W -march=native")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 ADD_LIBRARY(mylib STATIC compute_pairs.cpp coboundary_enumerator.cpp cube.cpp dense_cubical_grids.cpp joint_pairs.cpp)
