cleaned dir structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,14 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "-O3 -march=native")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-ADD_LIBRARY(mylib STATIC compute_pairs.cpp coboundary_enumerator.cpp cube.cpp dense_cubical_grids.cpp joint_pairs.cpp)
+include_directories("src/")
+
+ADD_LIBRARY(mylib STATIC src/compute_pairs.cpp src/coboundary_enumerator.cpp src/cube.cpp src/dense_cubical_grids.cpp src/joint_pairs.cpp)
 
 add_subdirectory(pybind11)
 
-pybind11_add_module(cripser cubicalripser_pybind.cpp)
+pybind11_add_module(cripser src/cubicalripser_pybind.cpp)
 target_link_libraries(cripser PRIVATE mylib)
 
-add_executable(cubicalripser cubicalripser.cpp)
+add_executable(cubicalripser src/cubicalripser.cpp)
 target_link_libraries(cubicalripser PRIVATE mylib)
