python binding for T-construction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,12 +15,16 @@ ADD_LIBRARY(vmylib STATIC src/coboundary_enumerator.cpp src/dense_cubical_grids.
 ## T-construction
 ADD_LIBRARY(tmylib STATIC src/coboundary_enumerator_T.cpp src/dense_cubical_grids_T.cpp)
 
+## Pytno modules
 add_subdirectory(pybind11)
-
 pybind11_add_module(cripser src/cubicalripser_pybind.cpp)
 target_link_libraries(cripser PRIVATE mylib)
 target_link_libraries(cripser PRIVATE vmylib)
+pybind11_add_module(tcripser src/cubicalripser_pybind_T.cpp)
+target_link_libraries(tcripser PRIVATE mylib)
+target_link_libraries(tcripser PRIVATE tmylib)
 
+## command-line executables
 add_executable(cubicalripser src/cubicalripser.cpp)
 add_executable(tcubicalripser src/cubicalripser.cpp)
 target_link_libraries(cubicalripser PRIVATE mylib)
