--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -88,9 +88,8 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y <dependencies>
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        poetry install
 
     - name: Run tests
       run: |
