--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -21,9 +21,8 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        # sudo apt-get install -y <dependencies>
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        poetry install
 
     - name: Compile on Ubuntu
       run: |
