--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         sudo apt-get update
         python -m pip install --upgrade pip
-        poetry install
+        poetry install --no--root
 
     - name: Compile on Ubuntu
       run: |
