--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         sudo apt-get update
         python -m pip install --upgrade pip
-        poetry install --no-root
+        
 
     - name: Compile on Ubuntu
       run: |
@@ -41,13 +41,16 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.12'
+    
+    - name: Install Poetry
+      run: curl -sSL https://install.python-poetry.org | python -
 
     - name: Install dependencies
       run: |
         # Install dependencies on macOS
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        poetry install --no-root
 
     - name: Compile on macOS
       run: |
@@ -63,13 +66,16 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.12'
+
+    - name: Install Poetry
+      run: curl -sSL https://install.python-poetry.org | python -
 
     - name: Install dependencies
       run: |
         # Install dependencies on Windows
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        poetry install --no-root
 
     - name: Compile on Windows
       run: |
@@ -85,7 +91,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.12'
 
     - name: Install dependencies
       run: |
@@ -107,7 +113,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.12'
 
     - name: Install dependencies
       run: |
