--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -79,22 +79,23 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-
+  
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-
+  
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.12'
-
+  
     - name: Install dependencies
       run: |
         sudo apt-get update
         python -m pip install --upgrade pip
-        poetry install
-
+        python -m pip install poetry
+        python -m poetry install
+  
     - name: Run tests
       run: |
         # Test commands
