--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -112,12 +112,13 @@ jobs:
       with:
         python-version: '3.12'
 
+    - name: Install Poetry
+      run: curl -sSL https://install.python-poetry.org | python -
+        
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y <dependencies>
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
 
     - name: Compile on Ubuntu
       run: |
