--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -103,32 +103,35 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
   
+    permissions:  # id-tokenのパーミッションを設定
+      id-token: write
+  
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-
+  
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.12'
-
-    - name: Install Poetry
-      run: curl -sSL https://install.python-poetry.org | python -
-        
+  
     - name: Install dependencies
       run: |
         sudo apt-get update
+        sudo apt-get install -y <dependencies>
         python -m pip install --upgrade pip
-
+        pip install -r requirements.txt
+  
     - name: Compile on Ubuntu
       run: |
         # Compile commands for Ubuntu
-
+  
     - name: Upload to PyPI
-      uses: pypa/gh-action-pypi-publish@v1.8.14  # 最新バージョンを指定
+      uses: pypa/gh-action-pypi-publish@v1.8.14
       with:
         user: __token__
         password: ${{ secrets.PYPI_TOKEN }}
+        
   
         
       
