--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -102,30 +102,33 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-  
+    
+    permissions:
+      id-token: write
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
   
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.12'
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.12'
   
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          python -m pip install --upgrade pip
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        python -m pip install --upgrade pip
   
-      - name: Compile on Ubuntu
-        run: |
-          # Compile commands for Ubuntu
+    - name: Compile on Ubuntu
+      run: |
+        # Compile commands for Ubuntu
   
-      - name: Upload to PyPI
-        uses: pypa/gh-action-pypi-publish@v1.8.14
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_TOKEN }}
+    - name: Upload to PyPI
+      uses: pypa/gh-action-pypi-publish@v1.8.14
+      with:
+        user: __token__
+        password: ${{ secrets.GITHUB_TOKEN }}
         
         
   
