--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -123,5 +123,5 @@ jobs:
     - name: Upload to PyPI
       uses: pypa/gh-action-pypi-publish@v1.8.14
       with:
-        user: __token__
-        password: ${{ secrets.PYPI_TOKEN }}
+        user: ${{ secrets.PYPI_TOKEN }}
+        password: ${{ secrets.PYPI_PASSWORD }}
