--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -115,7 +115,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install wheel twine
+        pip install wheel twine setuptools
 
     - name: Build distribution
       run: |
@@ -123,7 +123,7 @@ jobs:
 
     - name: Publish to PyPI
       env:
-        TWINE_USERNAME: __token__  # PyPIにログインするためのユーザー名
-        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}  # PyPIにログインするためのトークン
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
       run: |
         python -m twine upload --repository pypi dist/*
