--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,13 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "-O3")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-# pybind11 パッケージを検索して必要に応じてインクルードする
+# Add pybind11 subdirectory
+add_subdirectory(C:/Users/shing/CubicalRipser_3dim/pybind11)
+
+# Find pybind11 package
 find_package(pybind11 REQUIRED)
 
 include_directories("src/")
-
-# Add pybind11 subdirectory
-add_subdirectory(C:/Users/shing/CubicalRipser_3dim/pybind11)
 
 # Add libraries
 add_library(mylib STATIC src/compute_pairs.cpp src/cube.cpp src/joint_pairs.cpp)
