--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_FLAGS "-O3")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 # Add pybind11 subdirectory
-add_subdirectory(C:/Users/shing/CubicalRipser_3dim/pybind11)
+add_subdirectory(/home/runner/work/CubicalRipser_3dim/CubicalRipser_3dim/pybind11)
 
 # Find pybind11 package
 find_package(pybind11 REQUIRED)
