--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(cripser CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "-O3")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-set(pybind11_DIR /home/runner/work/CubicalRipser_3dim/CubicalRipser_3dim/pybind11)
+set(pybind11_DIR /home/shing/.local/lib/python3.12/site-packages)
 
 # Add pybind11 subdirectory
 add_subdirectory(/home/runner/work/CubicalRipser_3dim/CubicalRipser_3dim/pybind11)
