--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,13 @@ set(CMAKE_CXX_FLAGS "-O3")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(pybind11_DIR /home/shing/.local/lib/python3.12/site-packages)
 
-# Add pybind11 subdirectory
-add_subdirectory(/home/runner/work/CubicalRipser_3dim/CubicalRipser_3dim/pybind11)
+list(APPEND CMAKE_PREFIX_PATH "/home/shing/.local/lib/python3.12/site-packages")
 
 # Find pybind11 package
 find_package(pybind11 REQUIRED)
+
+# Add pybind11 subdirectory
+add_subdirectory(/home/runner/work/CubicalRipser_3dim/CubicalRipser_3dim/pybind11)
 
 include_directories("src/")
 
