--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(cripser CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "-O3")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-set(CMAKE_PREFIX_PATH "/C:/Users/shing/CubicalRipser_3dim/")
+set(CMAKE_PREFIX_PATH "C:/Users/shing/CubicalRipser_3dim/")
 set(pybind11_DIR "/home/shing/.local/lib/python3.12/site-packages/pybind11/share/cmake/pybind11")
 
 
