--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -128,9 +128,9 @@ jobs:
 
     - name: Build and upload
       run: |
-        python setup.py sdist bdist_wheel
+        python setup.py bdist_wheel
         twine upload --repository-url https://test.pypi.org/legacy/ dist/* --verbose
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-    
+      
