--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -116,26 +116,17 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install wheel twine setuptools
-    
+
     - name: Install pybind11
       run: |
         pip install pybind11
         pip install "pybind11[global]"
-    
-    - name: Build wheel for Linux
-      run: python setup.py bdist_wheel --plat-name=manylinux_3_x86_64
-  
-    - name: Build wheel for macOS
-      if: runner.os == 'macOS'
-      run: python setup.py bdist_wheel
-  
-    - name: Build wheel for Windows
-      if: runner.os == 'Windows'
-      run: python setup.py bdist_wheel --plat-name=win_amd64
-    
+
     - name: Build and upload
       run: |
+        python setup.py bdist_wheel --plat-name manylinux2014_x86_64
         twine upload --repository-url https://test.pypi.org/legacy/ dist/* --verbose
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+      
