--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -7,11 +7,7 @@ on:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
@@ -23,33 +19,66 @@ jobs:
         python-version: '3.12'
 
     - name: Install Poetry
-      run: |
-        if [ "${{ runner.os }}" == "Windows" ]; then
-          curl -sSL https://install.python-poetry.org | python -
-        else
-          curl -sSL https://install.python-poetry.org | POETRY_HOME=$HOME/.poetry python -
-          export PATH="$HOME/.poetry/bin:$PATH"
-        fi
+      run: curl -sSL https://install.python-poetry.org | python -
       
     - name: Install dependencies
       run: |
-        if [ "${{ runner.os }}" == "Windows" ]; then
-          python -m pip install --upgrade pip
-        else
-          sudo apt-get update
-          python -m pip install --upgrade pip
-        fi
+        sudo apt-get update
+        python -m pip install --upgrade pip
+        
 
-    - name: Compile
+    - name: Compile on Ubuntu
       run: |
-        python setup.py bdist_wheel
+        # Compile commands for Ubuntu
+
+  build_mac:
+    runs-on: macos-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.12'
+    
+    - name: Install Poetry
+      run: curl -sSL https://install.python-poetry.org | python -
+
+    - name: Install dependencies
+      run: |
+        brew update  # macOS環境でのパッケージ更新
+        python -m pip install --upgrade pip
+      
+
+    - name: Compile on macOS
+      run: |
+        # Compile commands for macOS
+
+  build_windows:
+    runs-on: windows-latest
+  
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.12'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+
+    - name: Compile on Windows
+      run: |
+        # Compile commands for Windows
+        
 
   test:
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-  
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
   
     steps:
     - name: Checkout repository
@@ -72,11 +101,7 @@ jobs:
         # Test commands
 
   deploy:
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-    
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     
     steps:
     - name: Checkout repository
@@ -104,3 +129,4 @@ jobs:
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+      
