--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -51,12 +51,9 @@ jobs:
         brew update  # macOS環境でのパッケージ更新
         python -m pip install --upgrade pip
       
-
     - name: Compile on macOS
       run: |
-        # Compile commands for macOS
-    - name: Compile on macOS
-      run: |
+        python -m pip install setuptools
         python setup.py bdist_wheel
 
   build_windows:
