--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -53,7 +53,7 @@ jobs:
       
     - name: Compile on macOS
       run: |
-        python -m pip install setuptools
+        python -m pip install --upgrade setuptools
         python setup.py bdist_wheel
 
   build_windows:
