--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -51,10 +51,14 @@ jobs:
         brew update  # macOS環境でのパッケージ更新
         python -m pip install --upgrade pip
       
+    - name: Upgrade setuptools
+      run: python -m pip install --upgrade setuptools
+      
     - name: Compile on macOS
       run: |
-        python -m pip install --upgrade setuptools
-        python setup.py bdist_wheel
+        python setup.py sdist bdist_wheel
+      
+
 
   build_windows:
     runs-on: windows-latest
