--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -56,7 +56,9 @@ jobs:
       
     - name: Compile on macOS
       run: |
-        python setup.py sdist bdist_wheel
+        python setup.py sdist
+        python setup.py bdist_wheel
+      
       
 
 
