--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -54,6 +54,9 @@ jobs:
     - name: Upgrade setuptools
       run: python -m pip install --upgrade setuptools
       
+    - name: Install wheel
+      run: python -m pip install wheel
+    
     - name: Compile on macOS
       run: |
         python setup.py sdist
