--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -57,6 +57,11 @@ jobs:
     - name: Install wheel
       run: python -m pip install wheel
     
+    - name: Install pybind11
+      run: |
+        pip install pybind11
+        pip install "pybind11[global]"
+    
     - name: Compile on macOS
       run: |
         python setup.py sdist
