--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -86,11 +86,20 @@ jobs:
       run: |
         python -m pip install --upgrade pip
 
+    - name: Upgrade setuptools
+      run: python -m pip install --upgrade setuptools
+
+    - name: Install wheel
+      run: python -m pip install wheel
+      
+    - name: Install pybind11
+      run: |
+        pip install pybind11
+        pip install "pybind11[global]"
+
     - name: Compile on Windows
       run: |
-        # Compile commands for Windows
-    - name: Compile on Windows
-      run: |
+        python setup.py sdist
         python setup.py bdist_wheel
         
 
