--- a/.github/workflows/compile_upload.yml
+++ b/.github/workflows/compile_upload.yml
@@ -35,9 +35,8 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake .. -DCMAKE_PREFIX_PATH="C:/Users/shing/AppData/Local/Packages/PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0/LocalCache/local-packages/Python311/site-packages"
+        cmake -DCMAKE_PREFIX_PATH="C:/Users/shing/AppData/Local/Packages/PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0/LocalCache/local-packages/Python311/site-packages" -Dpybind11_DIR=/path/to/pybind11Config.cmake ..
         cmake --build .
-    
       
   build_mac:
     runs-on: macos-latest
