--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,50 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.15)  # Updated to a more recent version for better feature support
 cmake_policy(SET CMP0028 NEW)
 
-project(cripser CXX)
-set(CMAKE_CXX_STANDARD 11)
+# Project settings
+project(cripser LANGUAGES CXX)
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+#set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 set(CMAKE_CXX_FLAGS "-O3")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
+# Include directories
 include_directories("src/")
 
+# Create static libraries
+add_library(mylib STATIC
+    src/compute_pairs.cpp
+    src/joint_pairs.cpp
+)
 
-ADD_LIBRARY(mylib STATIC src/compute_pairs.cpp src/cube.cpp src/joint_pairs.cpp)
+# V-construction library
+add_library(vmylib STATIC
+    src/coboundary_enumerator.cpp
+    src/dense_cubical_grids.cpp
+)
 
-## V-construction
-ADD_LIBRARY(vmylib STATIC src/coboundary_enumerator.cpp src/dense_cubical_grids.cpp)
+# T-construction library
+add_library(tmylib STATIC
+    src/coboundary_enumerator_T.cpp
+    src/dense_cubical_grids_T.cpp
+)
 
-## T-construction
-ADD_LIBRARY(tmylib STATIC src/coboundary_enumerator_T.cpp src/dense_cubical_grids_T.cpp)
-
-## Pytno modules
+# Python modules using pybind11
 add_subdirectory(pybind11)
-pybind11_add_module(cripser src/cubicalripser_pybind.cpp)
-target_link_libraries(cripser PRIVATE mylib)
-target_link_libraries(cripser PRIVATE vmylib)
-pybind11_add_module(tcripser src/cubicalripser_pybind_T.cpp)
-target_link_libraries(tcripser PRIVATE mylib)
-target_link_libraries(tcripser PRIVATE tmylib)
 
-## command-line executables
+pybind11_add_module(cripser src/cubicalripser_pybind.cpp)
+target_link_libraries(cripser PRIVATE mylib vmylib)
+
+pybind11_add_module(tcripser src/cubicalripser_pybind_T.cpp)
+target_link_libraries(tcripser PRIVATE mylib tmylib)
+
+# Command-line executables
 add_executable(cubicalripser src/cubicalripser.cpp)
+target_link_libraries(cubicalripser PRIVATE mylib vmylib)
+
 add_executable(tcubicalripser src/cubicalripser.cpp)
-target_link_libraries(cubicalripser PRIVATE mylib)
-target_link_libraries(cubicalripser PRIVATE vmylib)
-target_link_libraries(tcubicalripser PRIVATE mylib)
-target_link_libraries(tcubicalripser PRIVATE tmylib)
+target_link_libraries(tcubicalripser PRIVATE mylib tmylib)
+
+# Optional: Group libraries and executables in folders in IDEs
+set_target_properties(mylib vmylib tmylib cripser tcripser cubicalripser tcubicalripser PROPERTIES FOLDER "cripser")
