--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,11 @@
 name: Build Wheels
 
 on:
+  workflow_dispatch:
   push:
-    branches: [main]
+    branches: [main, test-workflow]
   pull_request:
-    branches: [main]
+    branches: [main, test-workflow]
 
 jobs:
   build:
