--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
     ]
     
 [build-system]
-requires = ["setuptools>=61.0", "wheel", "scikit-build>=0.13", "cmake>=3.15", "pybind11"]
+requires = ["setuptools", "wheel", "scikit-build>=0.13", "cmake>=3.15", "pybind11"]
 
 [tool.scikit-build]
 cmake.minimum_required = "3.15" # Minimum CMake version
